<resources>
    <string name="app_name">Practice</string>

    <string name="title_login">用户登录</string>
    <string name="title_register">用户注册</string>
    <string name="title_reset_pwd">找回密码</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_new">新密码</string>
    <string name="password_new_confirm">确认新密码</string>
    <string name="register">注册</string>

    <string name="username">用户名</string>
    <string name="mobile">手机号</string>
    <string name="email">邮箱</string>
    <string name="email_verification">邮箱验证码</string>
    <string name="email_recommend">推荐人邮箱账户</string>
    <string name="reset_pwd">找回密码</string>
    <string name="register_tips">还没账户？请立即免费注册</string>
    <string name="submit">提交</string>
    <string name="send">发送</string>

    <string name="tab_trade">交易</string>
    <string name="tab_user">用户</string>
    <string name="tab_message">消息</string>




    <!-- 充值提现 -->
    <string name="title_recharge">充值USDT</string>
    <string name="title_withdraw">提现</string>
    <string name="usdt_addr_hint">34位的usdt地址</string>
    <string name="usdt_balance">%1$s USDT</string>
    <string name="copy">复制</string>
    <string name="number">数量</string>
    <string name="ustd">USDT</string>
    <string name="ustd_addr_create">没有USDT地址? 立即创建</string>
    <string name="title_ustd_addr_create">创建提现地址</string>
    <string name="add">添加</string>
    <string name="title_order_detail">订单详情</string>
    <string name="report">举报</string>
    <string name="report_tips">注意:假如卖出用户举报情况属实一律封号处理</string>


    <!-- 交易 -->
    <string name="title_buy">买入</string>
    <string name="title_sell">卖出</string>
    <string name="trade_sell">卖出</string>
    <string name="trade_buy">买入</string>
    <string name="money">金额</string>
    
    <!-- 用户 -->
    <string name="title_user">用户</string>
    <string name="tab_recharge">充值</string>
    <string name="tab_withdraw">提现</string>
    <string name="tab_auth">身份认证</string>
    <string name="tab_record_trade">交易记录</string>
    <string name="tab_record_recharge">充值记录</string>
    <string name="tab_record_withdraw">提现记录</string>
    <string name="tab_withdraw_account">提现账户</string>
    <string name="tab_my_order">我的买入卖出</string>
    <string name="tab_promote">推广</string>
    <string name="tab_reset_pwd">修改密码</string>
    <string name="tab_support">客服</string>


    <string name="title_auth">身份认证</string>
    <string name="auth">认证</string>
    <string name="real_name">真实姓名</string>
    <string name="user_id">纳税ID</string>
    <string name="user_card_positive">纳税人证件照片正面</string>
    <string name="user_card_obverse">纳税人证件照片反面</string>

    <!-- 账户 -->
    <string name="title_bind_account">提现账户绑定</string>
    <string name="account">账户</string>
    <string name="bind">绑定</string>

    <string name="title_promote">推广</string>
    <string name="bonus_log">奖金记录</string>
    <string name="my_team">我的团队</string>

    <!-- 订单 -->
    <string name="title_order">订单列表</string>

    <string name="test">前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。前面说了一直反复说“当ScrollView发生滚动时”，那么怎么将AppBarLayout与ScrollView关联起来呢？我们注意到，AppBarLayout与ScrollView之间动作“相互依赖”，这不就是我们上一篇《CoordinateLayout的使用如此简单 》所学的内容吗？把ScrollView和AppBarLayout作为CoordinateLayout的子View，然后编写一个Behavior，在这个Behavior里面判断当前的操作是应该让ScrollView时刻保持在AppBarLayout之下（即只要改变AppBarLayout的位置就可以一起滑动），还是应该让ScrollView内部滚动而不让AppBarLayout位置发生变化等等这些需求，都是可以在Behavior里面处理的。你可以去针对你的ScrollView编写Behavior。然而，我们看到我们的AppBarLayout事先的功能比较复杂，如果我们自己去定义这样的效果，代码非常复杂，还要考虑很多方面，好在Android帮我们写好啦，我们直接用就是了，这个ScrollView就是NestedScrollView，请注意，它并没有继承ScrollView，它继承的是FrameLayout，但是它实现的效果把它可以看成是ScrollView。

作者：huachao1001
链接：https://www.jianshu.com/p/d159f0176576
來源：简书
著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。</string>


</resources>
