<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_logon_headview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/email"
                    android:padding="8dp"
                    android:textSize="@dimen/text_size_normal" />

                <Button
                    android:layout_width="54dp"
                    android:layout_height="23dp"
                    android:background="@drawable/shape_btn_bg"
                    android:text="@string/send"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/text_size_small" />

            </LinearLayout>


            <include layout="@layout/layout_line" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/email_verification"
                android:padding="8dp"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/password_new"
                android:padding="8dp"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/password_new_confirm"
                android:padding="8dp"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/shape_btn_bg"
                android:text="@string/submit"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>