<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_logon_headview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:padding="8dp"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/password"
                android:padding="8dp"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/password_confirm"
                android:padding="8dp"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/email_recommend"
                android:padding="8dp"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="42dp"
                android:text="@string/register"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_white"
                android:background="@drawable/shape_bg_btn_primary" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>