<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.logon.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/layout_logon_headview" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email"
                android:singleLine="true"
                android:padding="8dp"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/password"
                android:singleLine="true"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <TextView
                android:id="@+id/tv_reset_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="8dp"
                android:text="@string/reset_pwd"
                android:textSize="@dimen/text_size_normal" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_bg_btn_primary"
                android:text="@string/login"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:text="@string/register_tips"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>