<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <include layout="@layout/layout_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/number"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_light_black"
                android:text="@string/ustd"/>

        </LinearLayout>

        <include layout="@layout/layout_line" />

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="36dp"
            android:text="@string/tab_withdraw"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/text_white"
            android:background="@drawable/shape_btn_bg"/>
    </LinearLayout>


</LinearLayout>