<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <EditText
                android:id="@+id/et_truename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/real_name"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <EditText
                android:id="@+id/et_idcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@null"
                android:hint="@string/user_id"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="@dimen/text_size_normal" />

            <include layout="@layout/layout_line" />

            <TextView
                android:id="@+id/tv_auth_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:padding="8dp"
                android:text="用户已认证"
                android:textSize="@dimen/text_size_normal"
                android:visibility="gone" />

            <com.sisyphean.practice.widget.RatioLayout
                android:id="@+id/justurl_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ratio="1.6"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_bg_border_corner"
                android:padding="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="20dp"
                    android:drawableTop="@drawable/ic_plus"
                    android:text="@string/user_card_positive"
                    android:textColor="@color/text_light_black"
                    android:textSize="@dimen/text_size_normal" />

                <ImageView
                    android:id="@+id/iv_card_just"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </com.sisyphean.practice.widget.RatioLayout>

            <com.sisyphean.practice.widget.RatioLayout
                android:id="@+id/backurl_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ratio="1.6"
                android:layout_marginTop="30dp"
                android:background="@drawable/shape_bg_border_corner"
                android:padding="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawablePadding="20dp"
                    android:drawableTop="@drawable/ic_plus"
                    android:text="@string/user_card_obverse"
                    android:textColor="@color/text_light_black"
                    android:textSize="@dimen/text_size_normal" />

                <ImageView
                    android:id="@+id/iv_card_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />

            </com.sisyphean.practice.widget.RatioLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_bg_btn_primary"
                android:text="@string/auth"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_size_normal" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>